<resources>
    <string name="app_name">Ana</string>
    <string name="next">Next</string>
    <string name="welcome">Welcome to ANA</string>
    <string name="subtitle_onboarding1">ANA is a safe space for women to meet and find support.</string>
    <string name="title_onboarding2">All-in-one platform</string>
    <string name="subtitle_onboarding2">Space for women at all life stages, offering meditations, a gratitude journal, relaxing podcasts, a vision board, and 24/7 online consultant support.</string>
    <string name="title_onboarding3">MomMentor Alerts</string>
    <string name="subtitle_onboarding3"><![CDATA[App provides timely notifications with tailored advice for each stage of child development to keep mothers informed and prepared ]]></string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Начать</string>
    <string name="policy">Please keep your username and password confidential. By continuing, you accept <font color='#F29B27'>Ana\'s policies</font> and <font color='#F29B27'>terms and conditions</font></string>
    <string name="authorization">Authorization</string>
    <string name="by_phone_number">By phone number</string>
    <string name="error_phone_number1">Enter the number for the selected country</string>
    <string name="phone_number">Phone number</string>
    <string name="get_code">Get code</string>
    <string name="sign_in">Sign In</string>
    <string name="russian">Русский</string>
    <string name="type_sms_code">Enter the code from the SMS</string>
    <string name="what_s_your_name">What’s your name?</string>
    <string name="weekly_advices">Weekly advices</string>
    <string name="age">Child\'s age</string>
    <string name="message">Message</string>
    <string name="add_baby">Add baby</string>
    <string name="subscribe">Subscribe</string>
    <string name="profile">Profile</string>
    <string name="add_child">Add child</string>
    <string name="skip">Skip</string>
    <string name="meditation">Meditation</string>
    <string name="podcasts">Podcasts</string>
    <string name="wish_card">Wish Card</string>
    <string name="we_also_advise_you_to_watch">We also advise you to watch</string>
    <string name="month_ago">month ago</string>
    <string name="read_more">Read more</string>
    <string name="read_less">Read less</string>
    <string name="description_short">Immerse yourself in a world of deep inner peace with this meditation. Tune into the moment of presence, free your mind from worry and tension. Allow yourself to immerse yourself in your thoughts, sensations and emotions without judging or becoming attached to them.</string>
    <string name="description_full">Immerse yourself in a world of deep inner peace with this meditation. Tune into the moment of presence, free your mind from worry and tension. Allow yourself to immerse yourself in your thoughts, sensations and emotions without judging or becoming attached to them. Breathe deeply, allowing each inhale to fill you with peace and each exhale to release tension. Allow yourself to be simply here and now, in this moment of complete peace and harmony</string>
    <string name="log_out">Log Out</string>
    <string name="please_write_the_name_or_nickname">Please, write the name or nickname :)</string>
    <string name="your_consultant">Your consultant</string>
    <string name="online">Online</string>
    <string name="hello_i_need_assistance">Hello, I need assistance.</string>
    <string name="individual_advices">Individual advices</string>
    <string name="sleep">Sleep</string>
    <string name="food">Food</string>
    <string name="physical_activity">Physical Activity</string>
    <string name="mental_activity">Mental Activity</string>
    <string name="read">Read</string>
    <string name="contact_with_specialists">Contact with specialists</string>
    <string name="notification">Notification</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="weeks">" weeks | "</string>
    <string name="sessions">" sessions"</string>
    <string name="typing">Typing…</string>
    <string name="min">min</string>
    <string name="sec">sec</string>
    <string name="please_write_in_format">Please write in the format +7##########</string>
    <string name="wrong_code_please_try_again">Wrong code. Please try again</string>
    <string name="a_confirmation_code_was_sent_to_the_number">"A confirmation code was sent to the number "</string>
    <string name="your_name">Your name</string>
    <string name="these_sessions_are_available_only_with_premium_subscription">These sessions are available only with premium subscription.</string>
    <string name="views">views</string>
    <string name="section">Section</string>
    <string name="album">Album</string>
    <string name="download">Download</string>
    <string name="when_was_the_baby_born">When was the baby born?</string>
    <string name="what_is_your_child_s_name">What is your child’s name?</string>
    <string name="add_profile_photo">Add profile photo</string>
    <string name="upload_from_device">Upload from device</string>
    <string name="thank_you_for_provided_information">Thank you for provided information</string>
    <string name="camera_and_storage_permissions_are_needed_to_take_pictures">Camera and Storage permissions are needed to take pictures</string>
    <string name="hello">Hello</string>
    <string name="kazakh">Қазақ</string>
    <string name="english">English</string>
    <string name="didn_t_get_the_code">Didn\'t get the code?</string>
    <string name="description">Description</string>
    <string name="premium">Premium</string>
    <string name="take_full_advantage">Take full advantage</string>
    <string name="coming_soon">Coming soon</string>
    <string name="child_s_name">Child\'s name</string>
    <string name="podcast">Podcast</string>
    <string name="wishcard">Wishcard</string>
    <string name="gratitude_diary">Gratitude diary</string>
    <string name="insights">Insights</string>
    <string name="keep_calm_and_do_meditation">Keep calm and do meditation</string>
    <string name="menu_home">Home</string>
    <string name="self_care">Self-care</string>
    <string name="consultant">Consultant</string>
    <string name="savor_the_moment">Savor the moment!</string>
    <string name="year">" year"</string>
    <string name="month">" month"</string>
    <string name="days">" days"</string>
    <string name="retry">Retry</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete</string>
    <string name="cancel">Cancel</string>
    <string-array name="languages">
        <item>English</item>
        <item>Қазақ</item>
        <item>Русский</item>
    </string-array>
</resources>