<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/homeFragment"
        android:title="@string/menu_home"
        android:icon="@drawable/botnav_home"
        app:showAsAction="always"
        android:enabled="true"/>

    <item android:id="@+id/selfCareFragment"
        android:title="@string/self_care"
        android:icon="@drawable/botnav_care"
        app:showAsAction="always"
        android:enabled="true"/>

    <item android:id="@+id/chatFragment"
        android:title="@string/consultant"
        android:icon="@drawable/botnav_chat"
        android:enabled="true"
        app:showAsAction="always"/>

    <item android:id="@+id/profileFragment"
        android:title="@string/profile"
        android:enabled="true"
        android:icon="@drawable/botnav_profile"
        app:showAsAction="always"/>
</menu>