<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_vertical"
    tools:context=".presentation.ui.fragments.auth.AuthFragment">

    <ImageButton
        android:id="@+id/btn_back"
        android:background="@drawable/ic_back"
        android:layout_width="@dimen/dp_24"
        android:layout_height="@dimen/dp_24"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    
    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_splash"
        android:layout_marginTop="@dimen/dp_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_back"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/authorization"
        android:textColor="@color/text_main"
        android:gravity="center"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        android:fontFamily="@font/sf_pro_display_semibold"
        android:textSize="@dimen/sp_34"
        android:layout_marginTop="@dimen/dp_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"/>

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/by_phone_number"
        android:textColor="#8E8E93"
        android:fontFamily="@font/sf_pro_text_regular"
        android:textSize="@dimen/sp_15"
        android:textAlignment="center"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitle"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_32"
            app:hintTextColor="@color/grey"
            android:hint="@string/phone_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#171A1F"
                android:textSize="17sp"
                android:background="@drawable/bg_field"
                android:fontFamily="@font/sf_pro_text_regular"
                android:textColorHint="@color/grey"
                android:inputType="textEmailAddress"
                android:padding="@dimen/dp_16"
                android:singleLine="true"
                android:textCursorDrawable="@null" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_13"
            android:fontFamily="@font/sf_pro_text_regular"
            android:layout_marginStart="@dimen/dp_16"/>

        <com.fraggjkee.smsconfirmationview.SmsConfirmationView
            android:id="@+id/sms_code_view"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            app:scv_symbolBackgroundColor="#3dc9ccd1"
            app:scv_symbolTextColor="@color/text_main"
            app:scv_symbolTextFont="@font/sf_pro_display_bold"
            app:scv_symbolTextSize="28sp"
            android:visibility="gone"
            app:scv_symbolBorderColor="#3dc9ccd1"
            android:layout_gravity="center"
            android:gravity="center"
            app:scv_codeLength="6"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_32"
            app:scv_symbolBorderCornerRadius="12dp"/>

        <TextView
            android:id="@+id/resend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textAlignment="center"
            android:text="@string/didn_t_get_the_code"
            android:textColor="@color/grey"
            android:visibility="gone"
            android:fontFamily="@font/sf_pro_text_semibold"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"/>

        <Button
            android:id="@+id/signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_selected"
            android:text="@string/sign_in"
            style="@style/ButtonText"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_32"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/policy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/dp_16"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_globe" />

        <Spinner
            android:id="@+id/language_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@android:color/transparent"/>

        <ImageView
            android:id="@+id/spinner_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_down"
            android:layout_marginEnd="@dimen/dp_16"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <TextView
        android:id="@+id/policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#8E8E93"
        android:textAlignment="center"
        android:fontFamily="@font/sf_pro_text_regular"
        android:text="@string/policy"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginEnd="@dimen/dp_32"
        android:layout_marginBottom="@dimen/dp_32"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>