<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.fragments.main.care.meditation.ItemMeditationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:paddingBottom="@dimen/dp_16"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:background="@drawable/ic_back"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ToolbarText"
            android:layout_marginTop="@dimen/dp_8"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/meditation" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        app:cardCornerRadius="@dimen/dp_16"
        android:layout_height="164dp"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_16"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_marginTop="@dimen/dp_8">

        <ImageView
            android:id="@+id/preview"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_button_selected"
            android:backgroundTint="#DBD4FF"
            android:src="@drawable/ic_lock"
            android:padding="@dimen/dp_8"
            android:visibility="gone"
            android:layout_marginTop="@dimen/dp_16"
            app:layout_constraintStart_toStartOf="@id/card"
            app:layout_constraintBottom_toBottomOf="@id/card" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/total_sessions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_view_purple"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="5 sessions"
                android:paddingStart="@dimen/dp_16"
                android:paddingEnd="@dimen/dp_16"
                android:paddingTop="@dimen/dp_4"
                android:paddingBottom="@dimen/dp_4"
                android:layout_margin="@dimen/dp_8" />

            <TextView
                android:id="@+id/sessions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_view_purple"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="0/5"
                android:paddingStart="@dimen/dp_12"
                android:paddingEnd="@dimen/dp_12"
                android:paddingTop="@dimen/dp_4"
                android:paddingBottom="@dimen/dp_4"
                android:layout_margin="@dimen/dp_8" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_18"
        style="@style/ToolbarText"
        android:text="@string/savor_the_moment"
        app:layout_constraintTop_toBottomOf="@id/card"
        app:layout_constraintStart_toStartOf="@id/card"
        app:layout_constraintEnd_toEndOf="@id/card" />

    <ImageView
        android:id="@+id/time"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="@dimen/dp_16"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/ic_time" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="#817C7C"
        android:textSize="@dimen/sp_13"
        android:fontFamily="@font/sf_pro_text_regular"
        android:text="@string/month_ago"
        android:layout_marginTop="@dimen/dp_32"
        android:layout_marginStart="@dimen/dp_4"
        app:layout_constraintTop_toBottomOf="@id/card"
        app:layout_constraintBottom_toBottomOf="@id/time"
        app:layout_constraintStart_toEndOf="@id/time"
        app:layout_constraintEnd_toEndOf="@id/name" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#817C7C"
        android:textSize="@dimen/sp_13"
        android:fontFamily="@font/sf_pro_text_regular"
        android:text="@string/description"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_16"
        app:layout_constraintTop_toBottomOf="@id/time"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/dark"
        android:textSize="@dimen/sp_13"
        android:fontFamily="@font/sf_pro_text_regular"
        android:text="@string/description_short"
        android:layout_marginStart="@dimen/dp_16"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/name" />

    <TextView
        android:id="@+id/read_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_8"
        android:background="@android:color/transparent"
        android:text="@string/read_more"
        android:textColor="@color/purple" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="@id/read_more"
        app:layout_constraintStart_toStartOf="@id/read_more"
        app:layout_constraintEnd_toEndOf="@id/read_more"
        android:background="@color/purple" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_16"
        tools:listitem="@layout/item_sound"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/read_more"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>