<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_16"
        android:background="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/add_child"
        style="@style/ToolbarText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:textAllCaps="false"
        android:fontFamily="@font/sf_pro_text_regular"
        android:text="@string/skip"
        android:visibility="gone"
        android:textColor="@color/purple"
        app:layout_constraintTop_toTopOf="@id/back"
        app:layout_constraintBottom_toBottomOf="@id/back"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_16"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/back">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="@dimen/dp_16"
            android:fontFamily="@font/sf_pro_display_medium"
            tools:text="When was the baby born?"
            android:textAlignment="center"
            android:textColor="@color/color1"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_32"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_32"
            android:hint="@string/child_s_name"
            app:hintTextColor="@color/grey">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_field"
                android:fontFamily="@font/sf_pro_text_regular"
                android:inputType="textEmailAddress"
                android:padding="@dimen/dp_16"
                android:singleLine="true"
                android:textColor="#171A1F"
                android:textColorHint="@color/grey"
                android:textCursorDrawable="@null"
                android:textSize="17sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <DatePicker
            android:id="@+id/date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"/>

        <ImageView
            android:id="@+id/image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="@dimen/dp_32"
            android:layout_marginBottom="@dimen/dp_32"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button1"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="@dimen/dp_16"
            android:background="@drawable/bg_button_selected"
            android:text="@string/next" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button2"
            style="@style/ButtonText"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_16"
            android:background="@drawable/bg_button_selected"
            android:text="@string/next" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>